# backend/src/infra/swagger/paths/article.path.yaml
@@ -3,6 +3,17 @@
     tags:
       - article
     summary: 내 아티클 리스트 조회
+    parameters:
+      - name: page
+        in: query
+        description: 페이지 번호
+        schema:
+          type: integer
+      - name: page_size
+        in: query
+        description: 페이지 크기
+        schema:
+          type: integer
     responses:
       200:
         description: 아티클 리스트 조회 성공
